# markdown-to-respec

./: .gitignore  README.md  action.yml  markdown_to_respec.py  pyproject.toml  requirements.txt  respec_action.py  setup.py  test_markdown_to_respec.py  test_respec_action.py  test_respecmd.py
.github/workflows/: main.yml  test.yml  test_action.yml
test-data/embedded/: index.html  index.md
test-data/ignore/: index.md
test-data/subdir/: index.md
